--- a/index.html
+++ b/index.html
@@ -14,5 +14,6 @@
     <script src="Q3.js"></script>
     <script src="Q4.js"></script>
     <script src="Q5.js"></script>
+    <script src="Q6.js"></script>
   </body>
 </html>
