factorial of number

--- a/index.html
+++ b/index.html
@@ -9,12 +9,13 @@
   <body>
     <h1>Learning javascript Q1</h1>
 
-    <script src="Q1.js"></script>
+    <!-- <script src="Q1.js"></script>
     <script src="Q2.js"></script>
     <script src="Q3.js"></script>
     <script src="Q4.js"></script>
     <script src="Q5.js"></script>
     <script src="Q6.js"></script>
-    <script src="Q7.js"></script>
+    <script src="Q7.js"></script> -->
+    <script src="Q8.js"></script>
   </body>
 </html>
