--- a/index.html
+++ b/index.html
@@ -17,6 +17,7 @@
     <script src="Q6.js"></script>
     <script src="Q7.js"></script> -->
     <!-- <script src="Q8.js"></script> -->
-    <script src="Q13.js"></script>
+    <!-- <script src="Q12.js"></script> -->
+    <!-- <script src="Q13.js"></script> -->
   </body>
 </html>
