find same occurnces count

--- a/index.html
+++ b/index.html
@@ -19,5 +19,6 @@
     <!-- <script src="Q8.js"></script> -->
     <!-- <script src="Q12.js"></script> -->
     <!-- <script src="Q13.js"></script> -->
+    <script src="Q23.js"></script>
   </body>
 </html>
